--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,4 +14,5 @@
   </ion-list>
 
   <button ion-button (click)="login()">Login</button>
+  <a (click)="create_account()">Create Account</a> 
 </ion-content>
