--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,7 @@
 <ion-content padding>
   <ion-list>
 
+  <img class="center" src="../../assets/imgs/tmp-logo.png"/>
     <ion-item>
       <ion-label floating>Username</ion-label>
       <ion-input type="text"></ion-input>
