--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -1,24 +1,30 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Munchr</ion-title>
-  </ion-navbar>
+	<ion-navbar>
+		<button ion-button menuToggle>
+			<ion-icon name="menu"></ion-icon>
+		</button>
+		<ion-title>Munchr</ion-title>
+	</ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <img class="center" src="../../assets/imgs/tmp-logo.png"/>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
-      <ion-icon [name]="item.icon" item-left></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-right>
-        {{item.note}}
-      </div>
-    </button>
-  </ion-list>
-  <div *ngIf="selectedItem" padding>
-    You navigated here from <b>{{selectedItem.title}}</b>
-  </div>
+	<img class="center" src="../../assets/imgs/tmp-logo.png"/>
+	<ion-list>
+		<ion-item>
+			<ion-range min="1" max="20" pin="true" [(ngModel)]="distance">
+				<ion-icon range-left name="walk"></ion-icon>
+				<ion-icon range-right name="car"></ion-icon>
+			</ion-range>
+		</ion-item>
+		<ion-item>
+			<ion-range min="1" max="3" step="1" snaps="true" [(ngModel)]="price">
+				<ion-icon range-left name="pricetag"></ion-icon>
+				<ion-icon range-right name="pricetags"></ion-icon>
+			</ion-range>
+		</ion-item>
+		<button ion-button (click)="search()">Find Restaurant</button>
+	</ion-list>
+	<div *ngIf="selectedItem" padding>
+		You navigated here from <b>{{selectedItem.title}}</b>
+	</div>
 </ion-content>
