add display page

--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -22,7 +22,7 @@
 				<ion-icon range-right name="pricetags"></ion-icon>
 			</ion-range>
 		</ion-item>
-		<button ion-button (click)="search()">Find Restaurant</button>
+		<button ion-button class="center" (click)="search()">Find Restaurant</button>
 	</ion-list>
 	<div *ngIf="selectedItem" padding>
 		You navigated here from <b>{{selectedItem.title}}</b>
