--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -28,5 +28,5 @@
 
   </ion-list>
 
-  <button ion-button (click)="create_account()">Create Account</button>
+  <button ion-button class="center" (click)="create_account()">Create Account</button>
 </ion-content>
