--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -17,3 +17,7 @@
 	  </ion-item>
 	</ion-list>
 </ion-content>
+
+<ion-footer>
+	<button ion-button class="center" (click)=search()>Search</button>
+</ion-footer>
