--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,6 +14,6 @@
 
   </ion-list>
 
-  <button ion-button (click)="login()">Login</button>
-  <a (click)="create_account()">Create Account</a> 
+  <button ion-button class="center" (click)="login()">Login</button>
+  <a class="center" (click)="create_account()">Create Account</a> 
 </ion-content>
