--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -1,3 +1,12 @@
+<ion-header>
+  <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Munchr</ion-title>
+  </ion-navbar>
+</ion-header>
+
 <ion-content padding>
   <ion-list>
 
