--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,12 +4,12 @@
   <img class="center" src="../../assets/imgs/tmp-logo.png"/>
     <ion-item>
       <ion-label floating>Username</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input [(ngModel)]="email" type="text"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Password</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-input [(ngModel)]="password" type="password"></ion-input>
     </ion-item>
 
   </ion-list>
