--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -3,7 +3,7 @@
 
   <img class="center" src="../../assets/imgs/tmp-logo.png"/>
     <ion-item>
-      <ion-label floating>Username</ion-label>
+      <ion-label floating>Email</ion-label>
       <ion-input [(ngModel)]="email" type="text"></ion-input>
     </ion-item>
 
