--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,10 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+  <script src="ionic.tdcards.js"></script>
+  <script src="collide.js"></script>
+  <link href="ionic.tdcards.css" rel="stylesheet">
+
 </head>
 <body>
 
