--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -8,11 +8,11 @@
 </ion-header>
 
 <ion-content>
-	<td-cards>
-		<td-card ng-repeat="card in cards" on-destroy="cardDestroyed($index)" on-swipe="cardSwiped($index)">
-			<img src="{{card}}">
-		</td-card>
-	</td-cards>
+	<!--<td-cards>-->
+		<!--<td-card ng-repeat="card in cards" on-destroy="cardDestroyed($index)" on-swipe="cardSwiped($index)">-->
+			<!--<img src="{{card}}">-->
+		<!--</td-card>-->
+	<!--</td-cards>-->
 </ion-content>
 
 <ion-footer>
