--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -10,20 +10,33 @@
 <ion-content>
 	<div swing-stack #myswing1 [stackConfig]="stackConfig" (throwoutleft)="voteUp(true)" (throwoutright)="voteUp(false)" id="card-stack">
 	    <ion-card #mycards1 swing-card *ngFor="let c of cards">
-	      <ion-item *ngIf="c.picture">
-	        <ion-avatar item-left>
-	          <img *ngIf="c.picture"[src]="c.picture.medium">
-	        </ion-avatar>
-	        <h2>{{ c.name.first }} {{ c.name.last}}</h2>
-	        <p>{{ c.email }}</p>
-	      </ion-item>
+	      <!-- <ion-item *ngIf="c.picture"> -->
+	        <!-- <ion-avatar item-left> -->
+	          <!-- <img *ngIf="c.picture"[src]="c.picture.medium"> -->
+	          <img *ngIf="c.photo" [src]="c.photo">
+	        <!-- </ion-avatar> -->
+	        <!-- <h2>{{ c.name.first }} {{ c.name.last}}</h2> -->
+	        <!-- <p>{{ c.email }}</p> -->
+	      <!-- </ion-item> -->
 	 
-	      <ion-card-content *ngIf="c.location">
+<!-- 	      <ion-card-content *ngIf="c.location">
 	        From: {{ c.location.city }}, {{ c.location.postcode }}<br>
 	        Phone: {{ c.phone }}
-	      </ion-card-content>
-	 
-	      <ion-row  *ngIf="c.name">
+	      </ion-card-content> -->
+	 	<ion-title>{{ c.name }}</ion-title>
+	 	<ion-card-content *ngIf="c.location">
+			{{ c.location.address }}<br>
+			{{ c.location.locality }} <br>
+		<ion-icon [name]="c.rating >= 0 ? 'star' : 'star-outline'"></ion-icon>
+		<ion-icon [name]="c.rating >= 1 ? 'star' : 'star-outline'"></ion-icon>
+		<ion-icon [name]="c.rating >= 2 ? 'star' : 'star-outline'"></ion-icon>
+		<ion-icon [name]="c.rating >= 3 ? 'star' : 'star-outline'"></ion-icon>
+		<ion-icon [name]="c.rating >= 4 ? 'star' : 'star-outline'"></ion-icon>
+		<br>
+			{{ c.cuisines }}
+			
+		</ion-card-content>
+	      <!-- <ion-row  *ngIf="c.name">
 	        <ion-col>
 	          <button primary clear small (click)="voteUp(true)">
 	            <ion-icon name="thumbs-up"></ion-icon>
@@ -36,7 +49,7 @@
 	            <div>No</div>
 	          </button>
 	        </ion-col>
-	      </ion-row>
+	      </ion-row> -->
 	    </ion-card>
 	  </div>
 </ion-content>
