--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-	<img class="center" src="../../assets/imgs/tmp-logo.png"/>
+	<img height="200" class="center" src="../../assets/imgs/munchr.png"/>
 	<ion-list>
 		<ion-item>
 			<ion-range min="1" max="20" pin="true" [(ngModel)]="distance">
@@ -22,9 +22,9 @@
 				<ion-icon range-right name="pricetags"></ion-icon>
 			</ion-range>
 		</ion-item>
-		<button ion-button class="center" (click)="search()">Find Restaurant</button>
+
 	</ion-list>
-	<div *ngIf="selectedItem" padding>
-		You navigated here from <b>{{selectedItem.title}}</b>
-	</div>
 </ion-content>
+<ion-footer>
+	<button ion-button class="center" (click)="search()">Find Restaurant</button>
+</ion-footer>
