--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -10,19 +10,7 @@
 <ion-content>
 	<div swing-stack #myswing1 [stackConfig]="stackConfig" (throwoutleft)="voteUp(true)" (throwoutright)="voteUp(false)" id="card-stack">
 	    <ion-card #mycards1 swing-card *ngFor="let c of cards">
-	      <!-- <ion-item *ngIf="c.picture"> -->
-	        <!-- <ion-avatar item-left> -->
-	          <!-- <img *ngIf="c.picture"[src]="c.picture.medium"> -->
-	          <img *ngIf="c.photo" [src]="c.photo">
-	        <!-- </ion-avatar> -->
-	        <!-- <h2>{{ c.name.first }} {{ c.name.last}}</h2> -->
-	        <!-- <p>{{ c.email }}</p> -->
-	      <!-- </ion-item> -->
-	 
-<!-- 	      <ion-card-content *ngIf="c.location">
-	        From: {{ c.location.city }}, {{ c.location.postcode }}<br>
-	        Phone: {{ c.phone }}
-	      </ion-card-content> -->
+	    <img height="300" *ngIf="c.photo" [src]="c.photo">
 	 	<ion-title>{{ c.name }}</ion-title>
 	 	<ion-card-content *ngIf="c.location">
 			{{ c.location.address }}<br>
@@ -36,20 +24,6 @@
 			{{ c.cuisines }}
 			
 		</ion-card-content>
-	      <!-- <ion-row  *ngIf="c.name">
-	        <ion-col>
-	          <button primary clear small (click)="voteUp(true)">
-	            <ion-icon name="thumbs-up"></ion-icon>
-	            <div>Yes</div>
-	          </button>
-	        </ion-col>
-	        <ion-col>
-	          <button primary clear small (click)="voteUp(false)">
-	            <ion-icon name="thumbs-down"></ion-icon>
-	            <div>No</div>
-	          </button>
-	        </ion-col>
-	      </ion-row> -->
 	    </ion-card>
 	  </div>
 </ion-content>
