--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -10,7 +10,7 @@
 <ion-content>
 	<div swing-stack #myswing1 [stackConfig]="stackConfig" (throwoutleft)="voteUp(true)" (throwoutright)="voteUp(false)" id="card-stack">
 	    <ion-card #mycards1 swing-card *ngFor="let c of cards">
-	    <img height="300" *ngIf="c.photo" [src]="c.photo">
+	    <img (click)="info({restaurant: c})" height="300" *ngIf="c.photo" [src]="c.photo">
 	 	<ion-title>{{ c.name }}</ion-title>
 	 	<ion-card-content *ngIf="c.location">
 			{{ c.location.address }}<br>
