--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -24,6 +24,40 @@
 		</ion-item>
 
 	</ion-list>
+
+	<ion-list no-lines >	
+		<ion-item>
+			  <ion-label>Dine-out</ion-label>
+			  <ion-checkbox color="dark" ></ion-checkbox>
+		</ion-item>
+		<ion-item>
+			  <ion-label>Breakfast</ion-label>
+			  <ion-checkbox color="dark" ></ion-checkbox>
+		</ion-item>
+	</ion-list>
+
+	<ion-list no-lines>
+		<ion-item>
+			  <ion-label>Delivery</ion-label>
+			  <ion-checkbox color="dark" ></ion-checkbox>
+		</ion-item>
+		<ion-item>
+			  <ion-label>Lunch</ion-label>
+			  <ion-checkbox color="dark" ></ion-checkbox>
+		</ion-item>
+	</ion-list>
+
+	<ion-list no-lines>
+		<ion-item>
+			  <ion-label>Pubs & Bar</ion-label>
+			  <ion-checkbox color="dark" ></ion-checkbox>
+		</ion-item>
+		<ion-item>
+			  <ion-label>Dinner</ion-label>
+			  <ion-checkbox color="dark" ></ion-checkbox>
+		</ion-item>
+	</ion-list>
+
 </ion-content>
 <ion-footer>
 	<button ion-button class="center" (click)="search()">Find Restaurant</button>
