--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -9,26 +9,18 @@
 
 <ion-content>
 	<img height="200" class="center" src="../../assets/imgs/munchr.png"/>
-	<ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
-	<ion-list *ngIf="items && items.cuisines && items.cuisines.length > 0">
-		<ion-list-header>
-			Cuisines
-		</ion-list-header>
-		<ion-item *ngFor="let item of items.cuisines">
-			<ion-label>{{ item.name }}</ion-label>
-			<ion-checkbox [(ngModel)]="item.checked" item-left></ion-checkbox>
-		</ion-item>
-	</ion-list>
-
-	<ion-list *ngIf="items && items.categories && items.categories.length > 0">=
-		<ion-list-header>
-			Categories
-		</ion-list-header>
-		<ion-item *ngFor="let item of items.categories">
-			<ion-label>{{ item.name }}</ion-label>
-			<ion-checkbox [(ngModel)]="item.checked" item-left></ion-checkbox>
-		</ion-item>
-	</ion-list>
+	<ion-searchbar (ionInput)="show_items($event)"></ion-searchbar>
+	<ion-content>
+		<ion-list *ngIf="items && items.length > 0">
+			<!-- <ion-list-header> -->
+				<!-- Cuisines -->
+			<!-- </ion-list-header> -->
+			<ion-item *ngFor="let item of items">
+				<ion-label>{{ item }}</ion-label>
+				<ion-checkbox [(ngModel)]="marked[item]" item-left></ion-checkbox>
+			</ion-item>
+		</ion-list>
+	</ion-content>
 </ion-content>
 
 <ion-footer>
