--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -24,5 +24,5 @@
 </ion-content>
 
 <ion-footer>
-	<button ion-button class="center" (click)=search()>Search</button>
+	<button ion-button class="center" (click)=search() block>Search</button>
 </ion-footer>
