--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -41,5 +41,5 @@
 </ion-content>
 
 <ion-footer>
-	<button ion-button (click)="dismiss()" class="center">Back</button>
+	<button ion-button (click)="dismiss()" block>Back</button>
 </ion-footer>
