--- a/src/pages/final/final.html
+++ b/src/pages/final/final.html
@@ -19,5 +19,6 @@
 </ion-content>
 
 <ion-footer>
+	<button ion-button (click)="share()" block>Share..</button>
 	<button ion-button (click)="done()" block>Done</button>
 </ion-footer>
