--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -8,34 +8,49 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list>
+<img height="150" class="center" src="../../assets/imgs/munchr.png"/>
+  <form name="myForm" novalidate>
+    <ion-list>
 
-    <ion-item>
-      <ion-label floating>First Name</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label floating>First Name</ion-label>
+        <ion-input type="text"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label floating>Last Name</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label floating>Last Name</ion-label>
+        <ion-input type="text"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label floating>Email</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label floating>Email</ion-label>
+        <ion-input type="text"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label floating>Password</ion-label>
-      <ion-input type="password"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label floating>Password</ion-label>
+        <ion-input type="password"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label floating>Repeat Password</ion-label>
-      <ion-input type="password"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label floating>Repeat Password</ion-label>
+        <ion-input type="password"></ion-input>
+      </ion-item>
 
-  </ion-list>
+    </ion-list>
 
-  <button ion-button class="center" (click)="create_account()">Create Account</button>
+    <!-- <div class="padding">
+      <p ng-show="myForm.username.$error.required">* Username is required</p>
+      <p ng-show="myForm.username.$invalid && !myForm.username.$pristine">* Username must be an email address</p>
+      <p ng-show="myForm.password.$error.required">* Password is required</p>
+      <p ng-show="myForm.password.$error.minlength">* Password must be longer than 6 characters</p>
+    </div> -->
+  </form>
+
 </ion-content>
+
+
+
+<ion-footer>
+  <button ion-button class="center" (click)="create_account()" block>Create Account</button>
+</ion-footer>
