--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,5 +1,5 @@
 <ion-content padding>
-  <img class="center" src="../../assets/imgs/tmp-logo.png"/>
+  <img class="center" src="assets/imgs/tmp-logo.png"/>
   <ion-item>
     <ion-label floating>Email</ion-label>
     <ion-input [(ngModel)]="email" type="text"></ion-input>
