--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-	<img height="200" class="center" src="../../assets/imgs/munchr.png"/>
+	<img height="200" class="center" src="assets/imgs/munchr.png"/>
 	<ion-searchbar (ionInput)="show_items($event)"></ion-searchbar>
 	<ion-content>
 		<ion-list *ngIf="items && items.length > 0">
