--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-	<img height="200" class="center" src="../../assets/imgs/munchr.png"/>
+	<img height="200" class="center" src="assets/imgs/munchr.png"/>
 
 	<ion-list no-lines >	
 		<ion-item>
