--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content padding>
-<img height="150" class="center" src="../../assets/imgs/munchr.png"/>
+<img height="150" class="center" src="assets/imgs/munchr.png"/>
   <form name="myForm" novalidate>
     <ion-list>
 
