--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -8,49 +8,43 @@
 </ion-header>
 
 <ion-content padding>
-<img height="150" class="center" src="assets/imgs/munchr.png"/>
-  <form name="myForm" novalidate>
-    <ion-list>
+<img height="150" class="center" src="assets/imgs/munchr.png">
+  <!-- <form name="myForm" novalidate> -->
+  <!-- <ion-list> -->
 
-      <ion-item>
-        <ion-label floating>First Name</ion-label>
-        <ion-input type="text"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label floating>First Name</ion-label>
+      <ion-input [(ngModel)]="firstName" type="text"></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label floating>Last Name</ion-label>
-        <ion-input type="text"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label floating>Last Name</ion-label>
+      <ion-input [(ngModel)]="lastName" type="text"></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label floating>Email</ion-label>
-        <ion-input type="text"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label floating>Email</ion-label>
+      <ion-input [(ngModel)]="email" type="text"></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label floating>Password</ion-label>
-        <ion-input type="password"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label floating>Password</ion-label>
+      <ion-input [(ngModel)]="password" type="password"></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label floating>Repeat Password</ion-label>
-        <ion-input type="password"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label floating>Repeat Password</ion-label>
+      <ion-input [(ngModel)]="repeatPassword" type="password"></ion-input>
+    </ion-item>
 
-    </ion-list>
+  <!-- </ion-list> -->
 
-    <!-- <div class="padding">
-      <p ng-show="myForm.username.$error.required">* Username is required</p>
-      <p ng-show="myForm.username.$invalid && !myForm.username.$pristine">* Username must be an email address</p>
-      <p ng-show="myForm.password.$error.required">* Password is required</p>
-      <p ng-show="myForm.password.$error.minlength">* Password must be longer than 6 characters</p>
-    </div> -->
-  </form>
+<!--   <button ion-button class="center" (click)="create_account()" block>Create Account</button> -->
 
 </ion-content>
 
 
 
 <ion-footer>
-  <button ion-button class="center" (click)="create_account()" block>Create Account</button>
+  <button ion-button (click)="create_account()" block>Create Account</button>
 </ion-footer>
