--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,6 +15,6 @@
 
 <ion-footer>
   <button ion-button (click)="login()" block>Login</button>
-  <button ion-button (click)="login()" block>Login with Facebook</button>
+  <button ion-button (click)="facebook_login()" block>Login with Facebook</button>
   <button ion-button (click)="create_account()" block>Create Account</button>
 </ion-footer>
