login and stuff

--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -14,12 +14,12 @@
 
     <ion-item>
       <ion-label floating>First Name</ion-label>
-      <ion-input [(ngModel)]="firstName" type="text"></ion-input>
+      <ion-input [(ngModel)]="first_name" type="text"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Last Name</ion-label>
-      <ion-input [(ngModel)]="lastName" type="text"></ion-input>
+      <ion-input [(ngModel)]="last_name" type="text"></ion-input>
     </ion-item>
 
     <ion-item>
