--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -8,17 +8,23 @@
 </ion-header>
 
 <ion-content>
-	<img height="200" class="center" src="assets/imgs/munchr.png"/>
+	<!-- <img height="200" class="center" src="assets/imgs/munchr.png"/> -->
+	<ion-title>What are you in the mood for?</ion-title>
 	<ion-searchbar (ionInput)="show_items($event)"></ion-searchbar>
 	<ion-content>
 		<ion-list *ngIf="items && items.length > 0">
-			<!-- <ion-list-header> -->
-				<!-- Cuisines -->
-			<!-- </ion-list-header> -->
-			<ion-item *ngFor="let item of items">
-				<ion-label>{{ item }}</ion-label>
-				<ion-checkbox [(ngModel)]="marked[item]" item-left></ion-checkbox>
-			</ion-item>
+			<div *ngFor="let item of items">
+				<ion-item  *ngIf="marked[item]">
+					<ion-label>{{ item }}</ion-label>
+					<ion-checkbox [(ngModel)]="marked[item]" item-left></ion-checkbox>
+				</ion-item>
+			</div>
+			<div *ngFor="let item of items">
+				<ion-item  *ngIf="!marked[item]">
+					<ion-label>{{ item }}</ion-label>
+					<ion-checkbox [(ngModel)]="marked[item]" item-left></ion-checkbox>
+				</ion-item>
+			</div>
 		</ion-list>
 	</ion-content>
 </ion-content>
