--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -25,13 +25,13 @@
 	{{ restaurant.cuisines }} <br>
 
 	<ion-list>
-		<ion-item *ngFor="let review of reviews">
+		<ion-item *ngFor="let review of reviews" text-wrap>
 			<div *ngIf="review.rating > 0">
-			<ion-icon [name]="review.rating >= 0 ? 'star' : 'star-outline'"></ion-icon>
-			<ion-icon [name]="review.rating > 1 ? 'star' : 'star-outline'"></ion-icon>
-			<ion-icon [name]="review.rating > 2 ? 'star' : 'star-outline'"></ion-icon>
-			<ion-icon [name]="review.rating > 3 ? 'star' : 'star-outline'"></ion-icon>
-			<ion-icon [name]="review.rating > 4 ? 'star' : 'star-outline'"></ion-icon>
+				<ion-icon [name]="review.rating >= 0 ? 'star' : 'star-outline'"></ion-icon>
+				<ion-icon [name]="review.rating > 1 ? 'star' : 'star-outline'"></ion-icon>
+				<ion-icon [name]="review.rating > 2 ? 'star' : 'star-outline'"></ion-icon>
+				<ion-icon [name]="review.rating > 3 ? 'star' : 'star-outline'"></ion-icon>
+				<ion-icon [name]="review.rating > 4 ? 'star' : 'star-outline'"></ion-icon>
 			</div>
 			<p>{{ review.review_text }}</p>
 			<p>{{ review.review_time_friendly }}</p>
