ask for review, errors, lock orientation

--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -41,5 +41,6 @@
 </ion-content>
 
 <ion-footer>
+	<button ion-button (click)="choose()" block>Choose</button>
 	<button ion-button (click)="dismiss()" block>Back</button>
 </ion-footer>
