--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -35,7 +35,7 @@
 	<ion-list no-lines>
 		<ion-item>
 			  <ion-label>Pubs & Bars</ion-label>
-			  <ion-checkbox color="dark" [(ngModel)]="marked['Pubs & Bars']"></ion-checkbox>
+			  <ion-checkbox color="dark" [(ngModel)]="marked['Pubs %26 Bars']"></ion-checkbox>
 		</ion-item>
 		<ion-item>
 			  <ion-label>Dinner</ion-label>
