--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -10,8 +10,6 @@
 <ion-content>
 	<!-- <img height="200" class="center" src="assets/imgs/munchr.png"/> -->
 	<ion-title>What are you in the mood for?</ion-title>
-	<ion-searchbar (ionInput)="show_items($event)"></ion-searchbar>
-	<ion-content>
 		<ion-list *ngIf="items && items.length > 0">
 			<div *ngFor="let item of items">
 				<ion-item  *ngIf="marked[item]">
@@ -19,6 +17,10 @@
 					<ion-checkbox [(ngModel)]="marked[item]" item-left></ion-checkbox>
 				</ion-item>
 			</div>
+		</ion-list>
+	<ion-searchbar (ionInput)="show_items($event)"></ion-searchbar>
+	<ion-content>
+		<ion-list *ngIf="items && items.length > 0">
 			<div *ngFor="let item of items">
 				<ion-item  *ngIf="!marked[item]">
 					<ion-label>{{ item }}</ion-label>
