--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -9,23 +9,29 @@
 </ion-header>
 
 <ion-content>
-	<img *ngIf="!photos || photos.length == 0" [src]="restaurant.photo">
-	<ion-slides *ngIf="photos && photos.length > 0" [autoplay]="5000" [loop]="true" [pager]="true" [speed]="1000">
-		<ion-slide *ngFor="let photo of photos">
+	<img *ngIf="!details.photos || details.photos.length == 0" [src]="restaurant.photo">
+	<ion-slides *ngIf="details.photos && details.photos.length > 0" [autoplay]="5000" [loop]="true" [pager]="true" [speed]="1000">
+		<ion-slide *ngFor="let photo of details.photos">
 			<img [src]="photo">
 		</ion-slide>
 	</ion-slides>
 	{{ restaurant.location.address }} <br>
-	{{ restaurant.location.locality }} <br>
+	{{ details.phone }} <br>
+	<a href="{{details.website}}">Website</a> <br>
+	<p *ngIf=[details.opennow]> Open Now! </p>
 	<ion-icon [name]="restaurant.rating >= 0 ? 'star' : 'star-outline'"></ion-icon>
 	<ion-icon [name]="restaurant.rating > 1 ? 'star' : 'star-outline'"></ion-icon>
 	<ion-icon [name]="restaurant.rating > 2 ? 'star' : 'star-outline'"></ion-icon>
 	<ion-icon [name]="restaurant.rating > 3 ? 'star' : 'star-outline'"></ion-icon>
 	<ion-icon [name]="restaurant.rating > 4 ? 'star' : 'star-outline'"></ion-icon> <br>
-	{{ restaurant.cuisines }} <br>
-
+	<!-- Change this with string concat in code -->
+	<p *ngIf="details.price >= 0">$</p>
+	<p *ngIf="details.price > 1">$</p>
+	<p *ngIf="details.price > 2">$</p>
+	<p *ngIf="details.price > 3">$</p>
+	<p *ngIf="details.price > 4">$</p>
 	<ion-list>
-		<ion-item *ngFor="let review of reviews" text-wrap>
+		<ion-item *ngFor="let review of details.reviews" text-wrap>
 			<div *ngIf="review.rating > 0">
 				<ion-icon [name]="review.rating >= 0 ? 'star' : 'star-outline'"></ion-icon>
 				<ion-icon [name]="review.rating > 1 ? 'star' : 'star-outline'"></ion-icon>
