--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -10,55 +10,28 @@
 <ion-content>
 	<img height="200" class="center" src="assets/imgs/munchr.png"/>
 
-	<ion-list no-lines >	
-		<ion-item>
-			  <ion-label>Dine-out</ion-label>
-			  <ion-checkbox color="dark" [(ngModel)]="marked['Dine-out']"></ion-checkbox>
-		</ion-item>
-		<ion-item>
-			  <ion-label>Breakfast</ion-label>
-			  <ion-checkbox color="dark" [(ngModel)]="marked['Breakfast']"></ion-checkbox>
-		</ion-item>
-	</ion-list>
 
-	<ion-list no-lines>
-		<ion-item>
-			  <ion-label>Delivery</ion-label>
-			  <ion-checkbox color="dark" [(ngModel)]="marked['Delivery']"></ion-checkbox>
-		</ion-item>
-		<ion-item>
-			  <ion-label>Lunch</ion-label>
-			  <ion-checkbox color="dark" [(ngModel)]="marked['Lunch']"></ion-checkbox>
-		</ion-item>
-	</ion-list>
 
-	<ion-list no-lines>
-		<ion-item>
-			  <ion-label>Pubs & Bars</ion-label>
-			  <ion-checkbox color="dark" [(ngModel)]="marked['Pubs %26 Bars']"></ion-checkbox>
-		</ion-item>
-		<ion-item>
-			  <ion-label>Dinner</ion-label>
-			  <ion-checkbox color="dark" [(ngModel)]="marked['Dinner']"></ion-checkbox>
-		</ion-item>
-	</ion-list>
-
-	<ion-list>
-		<ion-item>
-			<ion-range min="1" max="20" pin="true" [(ngModel)]="distance">
-				<ion-icon range-left name="walk"></ion-icon>
-				<ion-icon range-right name="car"></ion-icon>
-			</ion-range>
-		</ion-item>
-		<ion-item>
-			<ion-range min="1" max="3" step="1" snaps="true" [(ngModel)]="price">
-				<ion-icon range-left name="pricetag"></ion-icon>
-				<ion-icon range-right name="pricetags"></ion-icon>
-			</ion-range>
-		</ion-item>
-
-	</ion-list>
 </ion-content>
 <ion-footer>
-	<button ion-button class="center" (click)="search()" [disabled]="loading" block> {{loading?  'Loading...' : 'Find Restaurant'}}</button>
+	<ion-item no-lines>
+		<ion-label item-left>Distance (miles)</ion-label>
+		<ion-badge item-right>{{ distance }} miles</ion-badge>
+	</ion-item>
+	<ion-range min="1" max="20" [(ngModel)]="distance">
+		<ion-icon range-left name="walk"></ion-icon>
+		<ion-icon range-right name="car"></ion-icon>
+	</ion-range>
+	<ion-item no-lines>
+		<ion-label item-left>Price (max)</ion-label>
+		<ion-badge item-right>${{ price*5 }}</ion-badge>
+	</ion-item>
+	<ion-range min="1" max="5" step="1" snaps="true" [(ngModel)]="price">
+		<ion-icon range-left name="pricetag"></ion-icon>
+		<ion-icon range-right name="pricetags"></ion-icon>
+	</ion-range>
+
+	<button ion-button class="center" (click)="search()" [disabled]="loading" block> {{loading?  'Loading...' : 'I know what I want'}}</button>
+	<button ion-button class="center" (click)="search()" [disabled]="loading" block> {{loading?  'Loading...' : 'Give me options'}}</button>
+	<button ion-button class="center" (click)="search()" [disabled]="loading" block> {{loading?  'Loading...' : 'Try a random cuisine'}}</button>
 </ion-footer>
