--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -18,7 +18,7 @@
 				</ion-item>
 			</div>
 		</ion-list>
-	<ion-searchbar (ionInput)="show_items($event)"></ion-searchbar>
+	<ion-searchbar *ngIf="showSearch" (ionInput)="show_items($event)"></ion-searchbar>
 	<ion-content>
 		<ion-list *ngIf="items && items.length > 0">
 			<div *ngFor="let item of items">
