--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -24,7 +24,7 @@
 
     <ion-item>
       <ion-label floating>Email</ion-label>
-      <ion-input [(ngModel)]="email" type="text"></ion-input>
+      <ion-input [(ngModel)]="email" type="email"></ion-input>
     </ion-item>
 
     <ion-item>
