--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,7 +2,7 @@
   <img height="200" class="center" src="assets/imgs/munchr.png"/>
   <ion-item>
     <ion-label floating>Email</ion-label>
-    <ion-input [(ngModel)]="email" type="text"></ion-input>
+    <ion-input [(ngModel)]="email" type="email"></ion-input>
   </ion-item>
 
   <ion-item>
