facebook login and friends

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -10,6 +10,8 @@
     <ion-input [(ngModel)]="password" type="password"></ion-input>
   </ion-item>
 
+  <p>{{ test_data | json }}</p>
+
 
 </ion-content>
 
