be able to login

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -10,7 +10,7 @@
     <ion-input [(ngModel)]="password" type="password"></ion-input>
   </ion-item>
 
-  <p>{{ test_data | json }}</p>
+  <!-- <p>{{ test_data | json }}</p> -->
 
 
 </ion-content>
