--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -3,7 +3,7 @@
 		<button ion-button menuToggle>
 			<ion-icon name="menu"></ion-icon>
 		</button>
-		<ion-title>Munchr</ion-title>
+		<ion-title>Cuisines</ion-title>
 	</ion-navbar>
 </ion-header>
 
