--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -9,11 +9,14 @@
 
 <ion-content>
 	<img height="100" class="center" src="assets/imgs/munchr.png"/>
-	<ion-content style="height:210px">
+	<ion-item no-lines>
+		<ion-label item-left>Friend Activity</ion-label>
+	</ion-item>
+	<ion-content style="height:160px">
 	<ion-list>
-		<ion-item *ngFor="let rating of activity">
+		<ion-item  *ngFor="let rating of activity" (click)="view_account(rating)">
 			<ion-avatar item-left>
-				<img src="{{ rating.photo || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
+				<img src="{{ rating.photo_url || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
 			</ion-avatar>
 			<h2>{{ rating.first_name }} {{rating.last_name}}</h2>
 			<p>{{ rating.liked? 'Liked' : 'Did not like'}} {{ rating.res_name }}</p>
