--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -1,16 +1,20 @@
 <ion-header>
 	<ion-navbar>
-		<button ion-button menuToggle>
-			<ion-icon name="menu"></ion-icon>
-		</button>
-		<ion-title>Account</ion-title>
+		<!-- <button ion-button menuToggle> -->
+			<!-- <ion-icon name="menu"></ion-icon> -->
+		<!-- </button> -->
+		<ion-title>{{ other_user.first_name }} {{ other_user.last_name }}</ion-title>
 	</ion-navbar>
 </ion-header>
 
 <ion-content>
-	<img height="250" class="center" src="{{user.photo_url || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
-	<h1>{{ user.first_name }} {{user.last_name}}</h1>
-	<div *ngIf="user.type === 'friend'">
+	<img height="250" class="center" src="{{other_user.photo_url || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
+	<h1>{{ other_user.first_name }} {{other_user.last_name}}</h1>
+	<div *ngIf="type === 'friend'">
+		<button ion-button outline item-right icon-left (click)="delete_friend()">
+		    <ion-icon name='close'></ion-icon>
+		    Remove Friend
+		</button>
 		<ion-item no-lines>
 			<ion-label item-left>Activity</ion-label>
 		</ion-item>
@@ -25,21 +29,44 @@
 			</ion-item>
 		</ion-list>
 	</div>
-	<div *ngIf="user.type === 'requestee'">
+	<div *ngIf="type === 'requested'">
 		<p>
 			Accept their request to see their activity
 		</p>
-		<button ion-button outline item-right icon-left>
+		<button ion-button outline item-right icon-left (click)="respond(true, user.user_id, other_user.user_id)">
 		    <ion-icon name='people'></ion-icon>
 		    Accept
 		</button>
-		<button ion-button outline item-right icon-left>
+		<button ion-button outline item-right icon-left (click)="respond(false, user.user_id, other_user.user_id)">
 		    <ion-icon name='close'></ion-icon>
 		    Decline
 		</button>
 	</div>
+	<div *ngIf="type === 'None'">
+		<p>
+			Send them a friend request to see their activity
+		</p>
+		<button ion-button outline item-right icon-left (click)="request()">
+		    <ion-icon name='people'></ion-icon>
+		    Add Friend
+		</button>
+	</div>
+	<div *ngIf="type === 'requester'">
+		<p>
+			Wait for them to respond to your friend request
+		</p>
+		<button ion-button outline item-right icon-left (click)="respond(false, other_user.user_id, user.user_id)">
+		    <ion-icon name='close'></ion-icon>
+		    Cancel Request
+		</button>
+	</div>
+	<div *ngIf="type === 'loading'">
+		<p>
+			Loading...
+		</p>
+	</div>
 </ion-content>
 
 <ion-footer>
-	<button ion-button class="center" (click)=home() block>Home</button>
+	<button ion-button class="center" (click)=back() block>Back</button>
 </ion-footer>
