--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -14,12 +14,14 @@
 	</ion-item>
 	<ion-content style="height:160px">
 	<ion-list>
-		<ion-item  *ngFor="let rating of activity" (click)="view_account(rating)">
-			<ion-avatar item-left>
+		<ion-item  *ngFor="let rating of activity">
+			<ion-avatar item-left (click)="view_account(rating)">
 				<img src="{{ rating.photo_url || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
 			</ion-avatar>
-			<h2>{{ rating.first_name }} {{rating.last_name}}</h2>
-			<p>{{ rating.liked? 'Liked' : 'Did not like'}} {{ rating.res_name }}</p>
+			<div (click)="view_restaurant(rating.res_id)">
+				<h2>{{ rating.first_name }} {{rating.last_name}}</h2>
+				<p>{{ rating.liked? 'Liked' : 'Did not like'}} {{ rating.res_name }}</p>
+			</div>
 			<ion-note item-right>{{ rating.review_date }}</ion-note>
 		</ion-item>
 	</ion-list>
