--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -4,6 +4,12 @@
 			<ion-icon name="menu"></ion-icon>
 		</button>
 		<ion-title>Munchr</ion-title>
+		<ion-buttons end>
+		  <button ion-button icon-only (click)="notifications()">
+		  <ion-badge>1</ion-badge>
+		    <ion-icon name="notifications"></ion-icon>
+		  </button>
+		</ion-buttons>
 	</ion-navbar>
 </ion-header>
 
