--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -5,8 +5,8 @@
 		</button>
 		<ion-title>Munchr</ion-title>
 		<ion-buttons end>
-		  <button ion-button icon-only (click)="notifications()">
-		  <ion-badge>1</ion-badge>
+		  <button ion-button icon-only (click)="view_notifications()">
+		  <ion-badge *ngIf="notifications">{{notifications.requests.length}}</ion-badge>
 		    <ion-icon name="notifications"></ion-icon>
 		  </button>
 		</ion-buttons>
