reach account page from notifications

--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -6,6 +6,7 @@
 		<ion-title>Munchr</ion-title>
 		<ion-buttons end>
 		  <button ion-button icon-only (click)="view_notifications()">
+		  <!-- TODO: check if notifications is > 0 -->
 		  <ion-badge *ngIf="notifications">{{notifications.requests.length}}</ion-badge>
 		    <ion-icon name="notifications"></ion-icon>
 		  </button>
