--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -55,7 +55,7 @@
 <ion-footer *ngIf="!display_options">
 	<ion-row>
 		<button ion-button class="center" (click)="throw_out(-1)">Dislike</button>
-		<button ion-button class="center" (click)="choose()">Choose</button>
+		<button ion-button class="center" (click)="choose()">Take me here</button>
 		<button ion-button class="center" (click)="throw_out(1)">Like</button>
 	</ion-row>
 </ion-footer>
