--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -48,6 +48,6 @@
 </ion-content>
 
 <ion-footer>
-	<button ion-button (click)="choose()" block>Choose</button>
+	<button ion-button (click)="choose()" block>Take me here</button>
 	<button ion-button (click)="dismiss()" block>Back</button>
 </ion-footer>
