--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -6,7 +6,7 @@
 
 
 <ion-content padding>
-	<h4 *ngIf="!requests || requests.length == 0">You have no notifications right now</h4>
+	<h4 *ngIf="(!requests || requests.length == 0) && (!recommendations || recommendations.length == 0)">You have no notifications right now</h4>
 
 	<div *ngIf="requests && requests.length > 0">
 		<ion-title>Friend Requests</ion-title>
@@ -23,6 +23,24 @@
 				<button (click)="respond(false, user)" ion-button outline item-right icon-left>
 				    <ion-icon name='close'></ion-icon>
 				    Decline
+				</button>
+			</ion-item>
+		</ion-list>
+	</div>
+	<div *ngIf="recommendations && recommendations.length > 0">
+		<ion-title>Restaurant Recommendations</ion-title>
+		<ion-list>
+			<ion-item *ngFor="let recom of recommendations">
+				<ion-avatar item-left (click)="view_account(recom)">
+					<img src="{{ recom.photo_url || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
+				</ion-avatar>
+				<div (click)="view_restaurant(recom.res_id)">
+					<h2>{{ recom.first_name }} {{recom.last_name}}</h2>
+					<p>Liked {{ recom.res_name }}</p>
+				</div>
+				<button (click)="dismiss(false, user)" ion-button outline item-right icon-left>
+				    <ion-icon name='close'></ion-icon>
+				    Dismiss
 				</button>
 			</ion-item>
 		</ion-list>
