tutorials and filters

--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -45,15 +45,15 @@
 	</ion-range>
 	<ion-list radio-group [(ngModel)]="selection">
 		<ion-item>
-			<ion-label>Try Random Restaurant</ion-label>
+			<ion-label>Any Cuisine</ion-label>
 			<ion-radio value="newRestaurant"></ion-radio>
 		</ion-item>
 		<ion-item>
-			<ion-label>Try New Cuisine</ion-label>
+			<ion-label>Recommend Cuisines</ion-label>
 			<ion-radio value="newCuisine"></ion-radio>
 		</ion-item>
 		<ion-item>
-			<ion-label>I Know What I Want</ion-label>
+			<ion-label>Select Cuisines You Want</ion-label>
 			<ion-radio value="know"></ion-radio>
 		</ion-item>
 	</ion-list>
