--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -9,7 +9,7 @@
 
 <ion-content>
 	<!-- <img height="200" class="center" src="assets/imgs/munchr.png"/> -->
-	<ion-title>What are you in the mood for?</ion-title>
+	<ion-title>{{ title }}</ion-title>
 	<ion-list *ngIf="items && items.length > 0">
 		<div *ngFor="let item of items">
 			<ion-item  *ngIf="marked[item]">
