--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -1,6 +1,11 @@
 <ion-header>
 	<ion-navbar>
 		<ion-title>{{ loading? 'Loading...' : details.name }}</ion-title>
+		<ion-buttons end>
+		  <button ion-button icon-only (click)="star_res()">
+		    <ion-icon name="{{(details && details.starred)? 'star' : 'star-outline'}}"></ion-icon>
+		  </button>
+		</ion-buttons>
 	</ion-navbar>
 </ion-header>
 
@@ -39,8 +44,8 @@
 				<ion-icon [name]="review.rating > 3 ? 'star' : 'star-outline'"></ion-icon>
 				<ion-icon [name]="review.rating > 4 ? 'star' : 'star-outline'"></ion-icon>
 			</div>
-			<p class="review">{{ review.review_text }}</p>
 			<p class="review">{{ review.review_time_friendly }}</p>
+			<p class="review">{{ review.review_text }}</p>
 		</ion-item>	
 	</ion-list>
 
