nicer display page

--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -21,19 +21,19 @@
 			<img (click)="info(res.res_id)" height="300" *ngIf="res.photo" [src]="res.photo">
 			
 			<ion-title>{{ res.name }} <ion-icon (click)=star_res() name="{{(res.starred)? 'star' : 'star-outline'}}"></ion-icon></ion-title>
-			<h3 style="color: white;">{{ res.evidence }}</h3>
-			<ion-card-content *ngIf="res.location">
-				{{ res.distance }} miles away<br>
-				{{ res.location.address }}<br>
-				<div *ngIf="res.rating != 0">
+<!-- 				<div *ngIf="res.rating != 0">
 					<ion-icon [name]="res.rating >= 0 ? 'star' : 'star-outline'"></ion-icon>
 					<ion-icon [name]="res.rating > 1 ? 'star' : 'star-outline'"></ion-icon>
 					<ion-icon [name]="res.rating > 2 ? 'star' : 'star-outline'"></ion-icon>
 					<ion-icon [name]="res.rating > 3 ? 'star' : 'star-outline'"></ion-icon>
 					<ion-icon [name]="res.rating > 4 ? 'star' : 'star-outline'"></ion-icon>
-				</div>
+				</div> -->
+			<ion-card-content *ngIf="res.location">
+				{{ res.location.address }}<br>
+				{{ res.distance }} miles away<br>
 				
 			</ion-card-content>
+			<h3 style="color: white;">{{ res.evidence }}</h3>
 		</ion-card>
 	</div>
 	<div *ngIf="display_options" class="center"  id="buttons">
